Fix backdrop z-index.

--- a/src/remark.less
+++ b/src/remark.less
@@ -135,6 +135,7 @@ html.remark-container, body.remark-container {
   right: 0;
   display: none;
   background: #000;
+  z-index: 2;
 }
 
 /*****************/
